--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -8,13 +8,19 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/jquery.hotspot.css">
     <link rel="stylesheet" href="../css/leaflet.css">
-    <!--<script type="text/javascript" src="../js/jquery.min.js"></script>-->
-    <!--<script src="https://code.jquery.com/jquery.js"></script>-->
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
+    <link rel="stylesheet" href="../css/bootstrap-select.min.css">
 
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap.min.js"></script>
+
     <script type="text/javascript" src="../js/modernizr.custom.49511.js"></script>
     <script type="text/javascript" src="../js/jquery.hotspot.min.js"></script>
+    <script type="text/javascript" src="../js/bootstrap-select.min.js"></script>
+    <script type="text/javascript" src="../js/moment.js"></script>
+    <script type="text/javascript" src="../js/bootstrap-datetimepicker.js"></script>
     <script type="text/javascript" src="../js/wheelzoom.js"></script>
     <script type="text/javascript" src="../js/leaflet.js"></script>
     <script type="text/javascript" src="../js/leaflet.ChineseTmsProviders.js"></script>
@@ -30,12 +36,16 @@
                 popup.hideCurrentPop();
             });
 
-            var mymap = L.map("map").setView([33.58873250, 119.6334535], 18);
+            var mymap = L.map("map").setView([33.58873250, 119.6334535], 17);
             L.tileLayer.chinaProvider("TianDiTu.Satellite.Map", {maxZoom: 19, minZoom: 5}).addTo(mymap);
-            L.imageOverlay("../../map/panorama.png",
-              [[33.585694321877583, 119.63701667124482], [33.591771424236896, 119.6298894339357]]).addTo(mymap);
+            L.imageOverlay("../img/panorama.png",
+                [[33.585694321877583, 119.63701667124482], [33.591771424236896, 119.6298894339357]]).addTo(mymap);
             L.marker([33.5867763, 119.635652]).addTo(mymap)
-              .bindPopup("<img src=\"../img/DJI_0104.jpg\" alt=\"small\" width=\"600\"/>");
+                .bindPopup("<img src=\"../img/DJI_0104.jpg\" alt=\"small\" width=\"600\"/>");
+            L.marker([33.5897553, 119.633852]).addTo(mymap)
+                .bindPopup("<img src=\"../img/DJI_0119.jpg\" alt=\"small\" width=\"600\"/>");
+            L.marker([33.5890603, 119.631652]).addTo(mymap)
+                .bindPopup("<img src=\"../img/DJI_0107.jpg\" alt=\"small\" width=\"600\"/>");
 
         });
     </script>
@@ -111,79 +121,70 @@
                 </div>
 
             </nav>
-            <ul class="pagination">
-                <li>
-                    <a href="#">前一日</a>
-                </li>
-                <li>
-                    <a href="#">6月20日</a>
-                </li>
-                <li>
-                    <a href="#">6月21日</a>
-                </li>
-                <li>
-                    <a>6月22日</a>
-                </li>
-                <li>
-                    <a>6月23日</a>
-                </li>
-                <li>
-                    <a>6月24日</a>
-                </li>
-                <li>
-                    <a href="#">后一日</a>
-                </li>
-            </ul>
         </div>
     </div>
     <div class="row clearfix">
-        <div class="col-md-8 column" id="layout_container">
-            <!--<div class="popover right pop1" data-easein="cardInRight" data-easeout="cardOutRight" id="pop1">-->
-                <!--<div class="arrow"></div>-->
-                <!--<div class="popover-inner">-->
-                    <!--<h3 class="popover-title">面板详情</h3>-->
-                    <!--<div class="popover-content">-->
-                        <!--<p>面板标号#0020122</p>-->
-                        <!--<img src="../img/DJI_0104.jpg" alt="small" width="600"/>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="popover top pop2" data-easein="cardInTop" data-easeout="cardOutTop" id="pop2">-->
-                <!--<div class="arrow"></div>-->
-                <!--<div class="popover-inner">-->
-                    <!--<h3 class="popover-title">面板详情</h3>-->
-                    <!--<div class="popover-content">-->
-                        <!--<p>面板标号#0070692</p>-->
-                        <!--<img src="../img/DJI_0107.jpg" alt="small" width="600"/>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="popover left pop3" data-easein="cardInLeft" data-easeout="cardOutLeft" id="pop3">-->
-                <!--<div class="arrow"></div>-->
-                <!--<div class="popover-inner">-->
-                    <!--<h3 class="popover-title">面板详情</h3>-->
-                    <!--<div class="popover-content">-->
-                        <!--<p>面板标号#0030661</p>-->
-                        <!--<img src="../img/DJI_0119.jpg" alt="small" width="600"/>-->
-                    <!--</div>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash;<div class="jumbotron">&ndash;&gt;-->
-            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon1" data-target="pop1"/>-->
-            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon2" data-target="pop2"/>-->
-            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon3" data-target="pop3"/>-->
-
-            <!--<img class="jumbotron" src="../../map/panorama.png" width="100%" id="image2" usemap="#farmmap">-->
-
-            <!--<map name="farmmap">-->
-                <!--<area shape="circle" coords="300,300,10" onclick="alert('oops')" href="#"/>-->
-            <!--</map>-->
-
-            <div id="map" style="height: 600px;"></div>
-
-            <!--</div>-->
+        <div class="col-md-3">
+            <div class="pagination form-group">
+                <div class="input-group date" id="datetimepicker1">
+                    <input type="text" class="form-control">
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
         </div>
-        <div class="col-md-4 column">
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker(
+                    {
+                        format: 'YYYY/MM/DD'
+                    }
+                );
+            });
+        </script>
+        <div class="col-md-9">
+            <div>
+                <ul class="pagination">
+                    <li>
+                        <a href="#">前一日</a>
+                    </li>
+                    <li>
+                        <a href="#">6月20日</a>
+                    </li>
+                    <li>
+                        <a href="#">6月21日</a>
+                    </li>
+                    <li>
+                        <a>6月22日</a>
+                    </li>
+                    <li>
+                        <a>6月23日</a>
+                    </li>
+                    <li>
+                        <a>6月24日</a>
+                    </li>
+                    <li>
+                        <a>7月12日</a>
+                    </li>
+                    <li>
+                        <a>7月30日</a>
+                    </li>
+                    <li>
+                        <a>8月10日</a>
+                    </li>
+                    <li>
+                        <a>8月15日</a>
+                    </li>
+                    <li>
+                        <a href="#">后一日</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="row clearfix">
+        <div class="col-md-6 column">
             <div class="list-group">
                 <a class="list-group-item active">巡查事件<span class="badge">3</span></a>
 
@@ -191,15 +192,76 @@
                     <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">面板标号#0020122</a>
                 </div>
                 <div class="list-group-item">
-                    <p class="list-group-item-text">
-                        <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">面板标号#0070692</a>
-                    </p>
+                    <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">面板标号#0070692</a>
                 </div>
                 <div class="list-group-item">
                     <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">面板标号#0030661</a>
                 </div>
                 <a class="list-group-item active"> </a>
             </div>
+        </div>
+        <div class="col-md-6 column">
+            <div class="list-group">
+                <a class="list-group-item active">未处理工单<span class="badge">3</span></a>
+
+                <div class="list-group-item">
+                    <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">工单编号#0069011</a>
+                </div>
+                <div class="list-group-item">
+                    <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">工单编号#0069016</a>
+                </div>
+                <div class="list-group-item">
+                    <font size="4" color="black">&bull;&nbsp;&nbsp;</font><a href="#">工单编号#0069018</a>
+                </div>
+                <a class="list-group-item active"> </a>
+            </div>
+        </div>
+    </div>
+    <div class="row clearfix">
+        <div class="col-md-12 column" id="layout_container">
+            <div class="popover right pop1" data-easein="cardInRight" data-easeout="cardOutRight" id="pop1">
+                <div class="arrow"></div>
+                <div class="popover-inner">
+                    <h3 class="popover-title">面板详情</h3>
+                    <div class="popover-content">
+                        <p>面板标号#0020122</p>
+                        <img src="../img/DJI_0104.jpg" alt="small" width="600"/>
+                    </div>
+                </div>
+            </div>
+            <div class="popover top pop2" data-easein="cardInTop" data-easeout="cardOutTop" id="pop2">
+                <div class="arrow"></div>
+                <div class="popover-inner">
+                    <h3 class="popover-title">面板详情</h3>
+                    <div class="popover-content">
+                        <p>面板标号#0070692</p>
+                        <img src="../img/DJI_0107.jpg" alt="small" width="600"/>
+                    </div>
+                </div>
+            </div>
+            <div class="popover left pop3" data-easein="cardInLeft" data-easeout="cardOutLeft" id="pop3">
+                <div class="arrow"></div>
+                <div class="popover-inner">
+                    <h3 class="popover-title">面板详情</h3>
+                    <div class="popover-content">
+                        <p>面板标号#0030661</p>
+                        <img src="../img/DJI_0119.jpg" alt="small" width="600"/>
+                    </div>
+                </div>
+            </div>
+            <!--<div class="jumbotron">-->
+            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon1" data-target="pop1"/>-->
+            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon2" data-target="pop2"/>-->
+            <!--<img src="../img/arrow1.png" alt="info" class="info-icon info-icon3" data-target="pop3"/>-->
+
+            <!--<img class="jumbotron" src="../img/panorama.png" width="100%" id="image2" usemap="#farmmap">-->
+
+            <map name="farmmap">
+                <area shape="circle" coords="300,300,10" onclick="alert('oops')" href="#"/>
+            </map>
+
+            <div id="map" style="height: 600px;"></div>
+            <div class="panel-footer"></div>
         </div>
     </div>
 </div>
