--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -5,14 +5,14 @@
   <title>UAV太阳能电站巡检系统</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- 引入 Bootstrap -->
-  <link href="../css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="../css/bootstrap.min.css" rel="stylesheet">-->
   <!--<link rel="stylesheet" href="../css/jquery.hotspot.css">-->
   <link rel="stylesheet" href="../css/leaflet.css">
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/bootstrap-datetimepicker.min.css">
   <link rel="stylesheet" href="../css/bootstrap-select.min.css">
   <link rel="stylesheet" href="../css/leaflet-vector-markers.css">
-  <link rel="stylesheet" href="../css/Control.FullScreen.css" />
+  <link rel="stylesheet" href="../css/Control.FullScreen.css"/>
 
 
   <script type="text/javascript" src="../js/jquery.min.js"></script>
@@ -32,10 +32,8 @@
 
 </head>
 <body>
-<!-- jQuery (Bootstrap 的 JavaScript 插件需要引入 jQuery) -->
 
-<!-- 包括所有已编译的插件 -->
-<!--<script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
+
 <div class="container">
   <div class="row clearfix">
     <div class="col-md-12 column">
@@ -235,7 +233,7 @@
       <!--<img class="jumbotron" src="../img/panorama.png" width="100%" id="image2" usemap="#farmmap">-->
 
       <!--<map name="farmmap">-->
-        <!--<area shape="circle" coords="300,300,10" onclick="alert('oops')" href="#"/>-->
+      <!--<area shape="circle" coords="300,300,10" onclick="alert('oops')" href="#"/>-->
       <!--</map>-->
 
       <div id="map" style="height: 600px;"></div>
@@ -247,79 +245,99 @@
 
 <script type="text/javascript">
 
-      var mymap = L.map("map",{
-        fullscreenControl: true,
-        fullscreenControlOptions:{position: "topleft"}
-      }).setView([33.58873250, 119.6334535], 18);
-      L.tileLayer.chinaProvider("TianDiTu.Satellite.Map", {maxZoom: 21, minZoom: 5}).addTo(mymap);
-      L.imageOverlay("../img/panorama.png",
-        [[33.585694321877583, 119.63701667124482], [33.591771424236896, 119.6298894339357]]).addTo(mymap);
+  var mymap = L.map("map", {
+    fullscreenControl: true,
+    fullscreenControlOptions: {position: "topleft"}
+  }).setView([33.58873250, 119.6334535], 18);
+  L.tileLayer.chinaProvider("TianDiTu.Satellite.Map", {maxZoom: 21, minZoom: 5}).addTo(mymap);
+  L.imageOverlay("../img/panorama.png",
+    [[33.585694321877583, 119.63701667124482], [33.591771424236896, 119.6298894339357]]).addTo(mymap);
 
-      var defectMarkers = {};
-      var cameraIcon = L.VectorMarkers.icon({icon: "camera", markerColor: "#F6F49D", prefix: "glyphicon"});
-      var unCheckedIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#466C95", prefix: "glyphicon"});
-//      var unCheckedIcon = L.VectorMarkers.icon({markerColor: "#466C95", iconSize: [30, 30]});
-      var defectIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#FF7676", prefix: "glyphicon"});
-//      var warnIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "yellow", prefix: "glyphicon"});
-      var fineIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#5DAE8B", prefix: "glyphicon"});
-      var imageGroup = L.layerGroup().addTo(mymap);
+  var defectMarkers = {};
+  var cameraIcon = L.VectorMarkers.icon({icon: "camera", markerColor: "#F6F49D", prefix: "glyphicon"});
+  var unCheckedIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#466C95", prefix: "glyphicon"});
+  //      var unCheckedIcon = L.VectorMarkers.icon({markerColor: "#466C95", iconSize: [30, 30]});
+  var defectIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#FF7676", prefix: "glyphicon"});
+  //      var warnIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "yellow", prefix: "glyphicon"});
+  var fineIcon = L.VectorMarkers.icon({icon: "certificate", markerColor: "#5DAE8B", prefix: "glyphicon"});
+  var imageGroup = L.layerGroup().addTo(mymap);
 
-      $.get("http://127.0.0.1:5000/defects", function(data, status){
-        var defects = JSON.parse(data);
+  $.get("http://127.0.0.1:5000/defects", function (data, status) {
+    var defects = JSON.parse(data);
 
-        for(var i = 0; i < defects.length; i++){
-          var defect = defects[i];
-          defectMarkers[defect.defectId] =
-            L.marker([defect.latitude, defect.longitude], {icon: unCheckedIcon, draggable: true}).addTo(mymap);
-        }
+    for (var i = 0; i < defects.length; i++) {
+      var defect = defects[i];
+      defectMarkers[defect.defectId] =
+        L.marker([defect.latitude, defect.longitude], {icon: unCheckedIcon, draggable: true}).addTo(mymap);
+    }
 
-        defects.forEach(function(defect){
-          defectMarkers[defect.defectId].on("dblclick", function(){
-            var that = $(this)[0];
-            console.log(that);
-            var popup = L.popup().setLatLng(that.getLatLng());
-            var $div = $("<div>");
-            var $confirmButton = $("<button>", {type: "button", class: "btn btn-danger btn-sm"}).append("确认警报");
-            $confirmButton.on("click", function(){
-              that.setIcon(defectIcon);
-              popup.remove();
-            });
-            $div.append($confirmButton);
-            var $cancelButton = $("<button>", {type: "button", class: "btn btn-success btn-sm"}).append("取消警报");
-            $cancelButton.on("click", function(){
-              that.setIcon(fineIcon);
-              popup.remove();
-            });
-            $div.append($cancelButton);
-            popup.setContent($div[0]).openOn(mymap);
+    defects.forEach(function (defect) {
+      defectMarkers[defect.defectId].on("contextmenu", function () {
+        var that = $(this)[0];
+        console.log(that);
+        var popup = L.popup({offset: [0, -30]}).setLatLng(that.getLatLng());
+        var $div = $("<div>");
+        $div.append($("<p>").append("主串编号: 000000"));
+        $div.append($("<p>").append("异常编号:"+defect["defectId"]));
+        var $confirmButton = $("<button>", {type: "button", "class": "btn btn-danger btn-sm"}).append("确认警报");
+        $confirmButton.on("click", function () {
+          that.setIcon(defectIcon);
+          popup.remove();
+        });
+        $div.append($confirmButton);
+        var $cancelButton = $("<button>", {type: "button", "class": "btn btn-success btn-sm"}).append("取消警报");
+        $cancelButton.on("click", function () {
+          that.setIcon(fineIcon);
+          popup.remove();
+        });
+        $div.append($cancelButton);
+        popup.setContent($div[0]).openOn(mymap);
+      });
+
+      defectMarkers[defect.defectId].on("click", function () {
+        imageGroup.clearLayers();
+        var cameraMarkers = [];
+        $.get("http://127.0.0.1:5000/images/defect/" + defect.defectId, function (data) {
+          JSON.parse(data).forEach(function (item) {
+            var imageMarker = L.marker([item.latitude, item.longitude], {
+              icon: cameraIcon,
+              draggable: true
+            }).addTo(mymap);
+            imageGroup.addLayer(imageMarker);
+            cameraMarkers.push({image: item.imageName, defect: defect.defectId, marker: imageMarker});
           });
+          cameraMarkers.forEach(function (item) {
+            var $div = $("<div>");
+            var irImgPath = "http://127.0.0.1:5000/image/labeled?image=" + item.image + "\&defect=" + item.defect;
+            var $irImg = $("<img>", {src: irImgPath});
+            var visImgPath = "http://127.0.0.1:5000/image/visual?image=" + item.image;
+            var $visImg = $("<img>", {src: visImgPath});
+            var $ul = $("<ul>", {"class": "nav nav-pills"}).append(
+              $("<li>", {"class": "active"}).append(
+                $("<a>", {"data-toggle": "tab", "href": "#irImageTab"}).append("红外照片")
+              )
+            ).append(
+              $("<li>").append(
+                $("<a>", {"data-toggle": "tab", "href": "#visImageTab"}).append("可见光照片")
+              )
+            );
+            $div.append($ul).append(
+              $("<div>", {"class": "tab-content"}).append(
+                $("<div>", {id: "irImageTab", "class": "row tab-pane fab in active"}).append($irImg)
+              ).append(
+                $("<div>", {id: "visImageTab", "class": "row tab-pane fad"}).append($visImg)
+              )
+            );
+            var popup = L.popup({closeOnClick: true}).setContent($div[0]);
+            item.marker.bindPopup(popup);
+          });
+//          cameraMarkers[0].marker.getPopup().update();
+//          cameraMarkers[0].marker.fireEvent("click");
+        });
+      });
 
-          $.get("http://127.0.0.1:5000/images/defect/"+defect.defectId, function(data){
-            defectMarkers[defect.defectId].on("click", function(){
-              imageGroup.clearLayers();
-              var cameraMarkers = [];
-              JSON.parse(data).forEach(function(item){
-                var imageMarker = L.marker([item.latitude, item.longitude], {icon: cameraIcon, draggable: true}).addTo(mymap);
-                imageGroup.addLayer(imageMarker);
-                cameraMarkers.push({image: item.imageName, defect: defect.defectId, marker: imageMarker});
-
-              });
-              cameraMarkers.forEach(function(item){
-                var $div = $("<div>");
-                var imgPath = "http://127.0.0.1:5000/image/labeled?image="+item.image+"\&defect="+item.defect;
-                $div.append($("<img>", {src: imgPath}));
-                var popup = L.popup().setContent($div[0]);
-//                var pos = mymap.latLngToLayerPoint(popup._latlng);
-//                L.DomUtil.setPosition(popup._wrapper.parentNode, pos);
-//                var draggable = new L.Draggable(popup._container, popup._wrapper);
-//                draggable.enable();
-                item.marker.bindPopup(popup);
-              })
-            })
-          })
-        })
-
-      })
+    })
+  })
 
 </script>
 
